--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "@vuelidate/validators": "^2.0.4",
     "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^11.0.3",
-    "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
     "axios-mock-adapter": "^2.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-next": "^0.24.18",
     "choices.js": "^11.0.2",
+    "cropperjs": "^2.1.0",
     "dayjs": "^1.11.13",
     "dropzone": "^6.0.0-beta.2",
     "flatpickr": "^4.6.13",
@@ -50,7 +50,6 @@
     "vue-3-slider-component": "^1.0.1",
     "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.3.3",
-    "vue3-apexcharts": "^1.6.0",
     "vue3-google-map": "^0.21.0",
     "vue3-select-component": "^0.14.0",
     "vue3-toastify": "^0.2.3",
